@startuml

title __OBSERVERS's Class Diagram__\n

    class fr.projava.triangle.Observers.ConnectedUsersObserver {
        + ConnectedUsersObserver()
        + update()
    }


    interface fr.projava.triangle.Observers.Observer {
        {abstract} + update()
    }

    class fr.projava.triangle.Observers.ReceivedMessageObserver {
        + ReceivedMessageObserver()
        + update()
    }


    class fr.projava.triangle.Observers.Subject {
        {static} - observers : ArrayList<Observer>
        + addObserver()
        {static} + notifyObservers()
        + removeObserver()
    }

  

  fr.projava.triangle.Observers.ConnectedUsersObserver .up.|> fr.projava.triangle.Observers.Observer
  fr.projava.triangle.Observers.ConnectedUsersObserver o-- fr.projava.triangle.Views.ChatWindowController : cwc
  fr.projava.triangle.Observers.ReceivedMessageObserver .up.|> fr.projava.triangle.Observers.Observer
  fr.projava.triangle.Observers.ReceivedMessageObserver o-- fr.projava.triangle.Views.ChatWindowController : cwc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
